@@ -1,27 +1,29 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
+DIST gog_duke_nukem_3d_1.0.0.7.tar.gz 30376296 SHA256 ba81c81d5f35f3aa424d30d9ab1c8441f8967bf4776cc85299efc95eea257ea3 SHA512 d0471bdc65b1030e080de382fea661d78348769d13bca2115ba1fb22aa2de54298bcaa4807c7315d0e2e4eefcc04bc9489d4e4c75fe0db1e99dd0ccd4e138450 WHIRLPOOL 4766138fd3decf78db00e7b6d6ad8128d742454573b56a880b94dba63b7de2438afc0e402e22eca0f0c6ca589f78ef6a28cfd0fbe5e62e40e3ce7427b2daa5fd
 DIST setup_duke3d_2.0.0.84.exe 38994440 SHA256 ac3c348620bb9a530d5c0d9274820c6bc204922b0b9247fbe40b4e926d375022 SHA512 0b62da98d01b385a6f7d4652eb2c28e80b42b443533b19262f94202802cd0c8031f20a8c687e4fc3906d6d9cb1e40558c3fd292a37d7a948febf10322b95b0f2 WHIRLPOOL 5ad53cc3456e4fc79bd87d5d5b33f8070a4f871d27261c3f0a62ee13b22d7a2b41cc47a23a3d478aac99b97203123bef1597a83a59b4175a66cb2e2b6a121f1b
 EBUILD duke3d-data-1.0-r1.ebuild 1654 SHA256 4ca728c884215ad1895deacb87a4224d7ee40bd44740040553a1f75e323758be SHA512 b10772a6595234a2a059c2e73fe76adf4855accb0e64a0cca30242f65b3a79f8340ee180ef83f0fa418639e673fd46c2ee9dca8d74a0b01c853344d5d5ea367c WHIRLPOOL c52878e69da55161a6ce1b6c5f145ff93fed741e969218429c0fbed34854fac514c89a0d5c1a56bfde79d8bfae7c26e7bd577826fa1e5901dd812910cbd82bfe
+EBUILD duke3d-data-1.0-r2.ebuild 1870 SHA256 50aeeb662c3cffb8ace29a62bbab69278214df28ebc886ea9ebb3b70bfe3f6ea SHA512 f93bf563f837b4d1303463117be5440dbccdb4eced0b2826fec5257de75bdc84c09c3388cdaa3919922789b1788e5e3d569c3e76749f485fda7a096c9901dda6 WHIRLPOOL 0b115023145f4e4647f44c5f7a4dca9c69d50c54732617a8c18a4aa6ab1b94d63d689ffd130d6fd3b4edc0b3645db401683cb40f4edf55abf478674ac39b2578
 EBUILD duke3d-data-1.0.ebuild 1003 SHA256 a89e6c7e86c14f1260c2158d8d0fe887200ed80514a0361a9166127aea400a27 SHA512 11bad502b50f1ba306eb53fc39c0d71fdadddd50eab665bf099a30d669c5dddaa69ab90a0ba8e4f7a9b7bf6452a4632d9641ca27c87fa8ac5b2c56f73e0a8ac5 WHIRLPOOL 563a771ec031e8bddfeb9231f2c7d14de6e91597da3d67a49b949aee8724092a5b43306ee3e8c6dec7e9e2e757912fff26dccdf36aae905eba50b01b22852fc6
-MISC ChangeLog 1690 SHA256 62b68deed1c4da6aa54ddae9839eaa28b553b34628d4645c017d0206c7b45e61 SHA512 7bdfb340b87acee4ec130da055fd073677bcd6645febe71c73e1f30750cd3eee44c36773651e01c3ec75d19bd07693acd99970892afd4c33b9f6b226afd20dfb WHIRLPOOL 55f88675c55474e02727d547832e0d9b39e5817e72a5298fd61ab0fd7c2920d865b9f941f884c89340a73e11bb4001d8a82c118f88325991a071dc9060304d85
+MISC ChangeLog 1840 SHA256 aef11ff54912f9a44ba3d68cbaaf16f6fe312ac15529047c49e7d9c28828af43 SHA512 49fa3f4fb7fd16f6aac5ed7d725938a748f6e189aee9b06c95d8244a6c1af74bf436f00ac648cf3b843f83f6e542b786eca3c460ac48e87a52f4c65ad6c43eb7 WHIRLPOOL 488d6c983395d9dc0f9c074d386dfdab6508d39737f9a01138eb021420d6b51d84d47ef186e00152296cde68e5fff178550c45ebb9c33c4384c2148df698449c
 MISC metadata.xml 245 SHA256 0cf147602fae37f99b2c46e78bbc0c75131ce1bcc054e111d800b7c940c17bdb SHA512 882b82ef06149b77aca3c07887e05f08aca330745d407fa120c78ffdcc106379cfec8b3773717428c287bfef87a21df7651419f4ab921899e0581140feea86f5 WHIRLPOOL 5c18de6ca4378cc2a7e1bd4a43ec2814e4d97fddb45141d3263b85f2eba9f97caf1f35a78a16dbdc639c05ff87d6e133dce03525ea13677aadb1aeae3f03c3a1
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJTi4vYXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJUHrm2XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzMDlCNDQ4NjEyNDI4NjA5REVEMDI3MzIy
-MjBDRDFDNUJERUVEMDIwAAoJECIM0cW97tAg2owP/iugQPQcLLmDaTVSxszY5eyP
-T7/fn/yz3uFfQcnb5UvA42JAJBN+N6DgE8Woj6ELgmejOj/WRSZrwRWn9c1q9emb
-luMS6EP/SBsep2bgmcoyLFEiK+xshhb6fQYRz8I8HrhQoqSmEwtO9ww/xL+k7OH8
-vV8NZfl0FERYyG9ycDxSBOi8My5IrFXR7R/to2UFoVNZw+0b9d6x3OBkXiEfoVt1
-GoXqyDDiRaeCHU26OpMwy2Yo7pvq2IDAx3x2lATxxHVL70M/4adycdRnO2SwJKFG
-Qp3wKCIBB5e+AjdJnYv9r2WmC0R8AXVImaWIgmnd99sw51P0h8+OY5P7gt7FzHFP
-aoPavWVix/Gv4OYnfCd/B8+It31aNL42D7n4wheEk68BtmzLaj5OUHdL2JeVEkOK
-gvpL79G10Th04iT6YNUxbt5j4XG8+D14TUgaXkJkxKeI96BUAUBEGNzZZ5dk1LcQ
-ReI9TiW3p5azmyznJC4FUPfooEUK5SN80Opu+NWTmA53NxYENVM+V65wUBMuK/s3
-ZeoRmL4LpIQaSfhKCI8ksSDGdgny1IzNUQQs89PYjhpszlWdGsd72wffcWRxRokr
-2XCOTbrEH/0KY1KuoG0KnoVmyrj8ZJlj1luvWku1deS4VMaTSeJrINZPhwC6/QF6
-vxnF9x5cOaH2Ikkjgdit
-=X/e+
+MjBDRDFDNUJERUVEMDIwAAoJECIM0cW97tAgRN4QAModFEAr6QM8Bk/czQeDhLcU
+XNK3/hqR/A7lIcmQaGuDLTeBrf3DNuTPBGJLHp2msYEmcI5IdXUjnJ/OpT7QnhEO
+EOJ8LlvmZN+qhJEacJjVyFr8/T304EvI05yv2rPUqQfGnE6UK/AzYgTf/kionG7K
+8QliJM4S6gs0E0UXkDiuKzdUDCbT8Pmxk/M6ETpaBbqIOcmmBt9UZ24/8ugLc3kk
+fM00GvyAnEmB4ADOukM6uadWAJYE7S3chN0kLE/riDE5k9pxRBUZwLtkygRLVw2Q
+wgHOncjakqnRAz8x1EU7KCZcdcWbdBWfdm8phvrVuaSkx0cWA7a/bCeCBpRyTPeX
+hGuWVsMoONaoN8+E4H22M7yaPdtiaYBVD8x5wmoCwOAm5mSAPjhnIHJ+UJ99VcMH
+wwKCj8uYy5GJhy6z93//BayB8OfiA29Lsg9RxNclLAYQWQ3CLYS6VpHWPWgIjYQT
+MfZr8aPpQjjERQP6tSMvdznn10pPFM//IuppXUyLSxcEB/4LPXqOX+FoczWnMSGf
+OalNHPJmjE0epkj07d02aFSgAzDx7TDUHNw5RUFIpQxNnET9cOBWFJunZ0whlf30
+7LUiA+/V0UhHnoEQnPW9sBOZ6321bmUOdeXhz/UcB66BCHo7+gH2Ueq6SCRBG/op
+BZ9/32vHItkW9wx9rXiC
+=7kig
 -----END PGP SIGNATURE-----
