@@ -1,0 +1,15 @@
+DEFINED_PHASES=compile configure install nofetch postinst preinst prepare setup unpack
+DESCRIPTION=Duke Nukem 3D data files
+EAPI=5
+HOMEPAGE=http://www.3drealms.com/
+IUSE=gog cdinstall
+KEYWORDS=~amd64 ~hppa ~ppc ~x86
+LICENSE=DUKE3D
+PROPERTIES=cdinstall? ( interactive )
+RDEPEND=|| ( games-fps/eduke32 games-fps/duke3d ) games-misc/games-envd
+REQUIRED_USE=^^ ( cdinstall gog )
+RESTRICT=mirror bindist gog? ( fetch )
+SLOT=0
+SRC_URI=gog? ( gog_duke_nukem_3d_1.0.0.7.tar.gz )
+_eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	cdrom	49b4b952fb5c83fac6c616b532723e60	eutils	32548a82e42dc26e3312581476d2f20c	games	e221fed675714bd5545b7488aed9f822	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	portability	a45c088f246ef5091e029f6285d7ce42	toolchain-funcs	0f1760274637a138b99bb649202ea402	user	f54e098dd38ba1c0847a13e685b87747
+_md5_=0541612cf1fa430e04755ca5e01a430f
